# aldkit

./: MANIFEST.in  PKG-INFO  README.md  ald.py  aldkit-1.0.11-py3-none-any.whl  pyproject.toml  setup.cfg  setup.py  tools.py
src/aldkit/: ald.py  aldhelp  status  tools.py
src/aldkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aldkit/aldcodes/: cluster_settings.py  dft.py  parameters_convergence.py
src/aldkit/test/: ald_input.py  si.cif
